--- a/practiceStyle.css
+++ b/practiceStyle.css
@@ -56,3 +56,41 @@ button {
     width:260px;
     padding-top: 10px;
 }
+
+#settingsBar {
+    float:left;
+    display:block;
+    height:80%;
+    width:0%;
+    position:fixed;
+    z-index:1;
+    top:10%;
+    bottom:200px;
+    left:0;
+    background-color:#f2eae3;
+    overflow-x:hidden;
+    padding-top:60px;
+    transition:0.7s;
+    font-size:22px;
+    text-align: center;
+}
+
+#save {
+    width:40%;
+    height:5%;
+    background-color: #42f46e;
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+	border-radius: 8px;
+    display: inline-block
+}
+
+#settingsButton {
+    width:64px;
+    height:64px;
+}
